# fizzics

./: Cargo.toml  build.rs
src/: main.rs  xpbd.py
src/shaders/: draw_particles.slang  draw_particles.spv  draw_particles.wgsl  draw_particles__fragment_main.glsl  draw_particles__fragment_main.spv  draw_particles__vertex_main.glsl  draw_particles__vertex_main.spv  fullscreen_quad.frag  fullscreen_quad.frag.wgsl  fullscreen_quad.vert  fullscreen_quad.vert.wgsl  pbd.glsl  pbd.spv  pbd.wgsl  pbd__fragment_main.glsl  pbd__handle_particle_collisions.glsl  pbd__handle_particle_collisions.spv  pbd__vertex_main.glsl  pbd__vertex_main.spv  pbd__voxel_constraint.glsl  pbd__voxel_constraint.spv  raymarch.glsl  raymarch.slang  raymarch.spv  xpbd-oriented-particles.wgsl  xpbd-pbsm.wgsl
