[package]
name = "fizzics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-wgpu = "0.28.1"
wgpu = { version = "22.1.0", features = ["spirv"] }
winit = "0.30.5"
tokio = { version = "1.40", features = ["process", "rt"] }
pollster = "0.3.0"
bytemuck = "1.18.0"
tao = "0.30.0"
nalgebra = { version = "0.33.0", features = ["bytemuck"] }

[build-dependencies]
futures = "0.3.30"
tokio = { version = "1.40", features = ["process", "rt"] }
